--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
     "element-plus": "^2.8.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
