--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-.env
-.env.example
+# local env files
 .env.local
-.env.staging
+.env.*.local
 
 node_modules
 .DS_Store
