--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_APP_ENV=local
 VITE_API_LUMEN=http://localhost:8000/
 VITE_API_BOOKS=https://api.freeapi.app/api/v1/public/books
+VITE_API_VEHICLES = http://localhost:84/
